changed max-height from 440px  to the current height of widget

--- a/src/MaterialUiTable/style-panel-template.html
+++ b/src/MaterialUiTable/style-panel-template.html
@@ -97,7 +97,7 @@
 				<div class="generic-pane-rows-holder">
 					<div class="intervals-pane-row">
 						<div class="cbox-pane-row slf-back-hov-light" style="width: 100%;">
-							<div class="pane-caption" style="width: unset;">Default rows per page</div>
+							<div class="pane-caption" style="width: unset;">Rows per page</div>
 							<div class="input-wrapper">
 								<input id="tablePaginationRowsPerPage" size="2" style="width: unset; padding-left: 5px; padding-right: 5px;" type="text"
 									data-ng-model="widget.style.tablePaginationRowsPerPage"
